---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2023-12-06
  Changes:
    - Interface handling for railloader and railloader-MXO improved
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2023-12-05
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2023-12-05
  Changes:
    - Some finetuning to curb the gravel glut in the late game
    - Why shouldn't the big-processing-machine have 4 module slots? It's big, isn't it?
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2023-05-29
  Changes:
    - Support for railloader added: What are ores?
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-03-18
  Bugfixes:
    - icon setup for advanced-oil-technology corrected
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-03-25
  Bugfixes:
    - fixing when setting is off the corresponding icons are undefined
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-03-25
  Changes:
    - icons in settings
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-02-17
  Changes:
    - icons in autoplace controls
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-12-04
  Bugfixes:
    - icon setup for steel-2-technology corrected